--- a/28주차.md
+++ b/28주차.md
@@ -57,131 +57,104 @@
 
 - GC알고리즘에 대해 말하고 설명하시오.
     <details>
-      Reference Counting : <br>
-      해당 객체에 접근할 수 있는 방법의 개수를 세고, 해당 개수가 0이 되면 GC의 대상이 됨. 이 알고리즘은 순환참조의 문제가 발생
-
-      Mark And Sweep(Mark & Compact) : <br>
-      root space에서부터 해당 객체에 접근 가능한지를 기준으로 한다.
-      루트부터 그래프 순회를 통해 연결된 객체를 찾아내고, 연결이 끊어진 객체를 지우는 방식.
-      그 이후에는 Compaction을 통해 분산 되었던 메모리를 정리한다(필수가 아님)
-
-      GC가 Stack의 모든 변수를 스캔하면서 힙에서 참조된 객체들을 마킹(Mark), 마킹되지 않는 객체를 힙에서 제거(Sweep)
+        Reference Counting : <br>
+        해당 객체에 접근할 수 있는 방법의 개수를 세고, 해당 개수가 0이 되면 GC의 대상이 됨. 이 알고리즘은 순환참조의 문제가 발생 <br>
+        Mark And Sweep(Mark & Compact) : <br>
+        root space에서부터 해당 객체에 접근 가능한지를 기준으로 한다.
+        루트부터 그래프 순회를 통해 연결된 객체를 찾아내고, 연결이 끊어진 객체를 지우는 방식.
+        그 이후에는 Compaction을 통해 분산 되었던 메모리를 정리한다(필수가 아님)<br>
+        GC가 Stack의 모든 변수를 스캔하면서 힙에서 참조된 객체들을 마킹(Mark), 마킹되지 않는 객체를 힙에서 제거(Sweep)
   
     </details>
 
-- String 객체가 불변인 이유에 대해 아는대로 설명해주세요
+- GC의 대상이 되는 경우를 말하시오.
     <details>
-
-    1. 캐싱 기능에 의한 메모리 절약과 속도 향상
-        - Java에서 String 객체들은 Heap의 String Pool이라는 공간에 저장되는데, 참조하려는 문자열이 String Pool에 존재하는 경우 새로 생성하지 않고, Pool에 있는 객체를 사용하기 때문에 특정 문자열 값을 재사용하는 빈도가 높을 수록 상당한 성능향상을 기대할 수 있다.
-    2. Thread-safe
-        - String객체는 불변이기 때문에 여러 스레드에서 동시에 특정 String 객체를 참조하더라도 안전하다.
-    3. 보안 기능
-        - 중요한 데이터를 문자열로 다루는 경우, 강제로 해당 참조에 대한 문자열 값을 바꾸는 것이 불가능하기 때문에 보안에 유리하다.
-    </details>
-
-- String, StringBuffer, StringBuilder 클래스의 각각의 특징에 대해 설명하세요
-
-    <details>
-      
-    ### String
-
-    - new 연산을 통해 생성된 인스턴스의 메모리 공간은 변하지 않음 (Immutable)
-    - Garbage Collector로 제거되어야 함.
-    - 문자열 연산시 새로 객체를 만드는 Overhead 발생
-    - 객체가 불변하므로, Multithread에서 동기화를 신경 쓸 필요가 없음. (조회 연산에 매우 큰 장점)
-    
-    ### StringBuffer, StringBuilder
-    
-    - 공통점
-        - new 연산으로 클래스를 한 번만 만듬 (Mutable)
-        - 문자열 연산시 새로 객체를 만들지 않고, 크기를 변경시킴
-        - StringBuffer와 StringBuilder 클래스의 메서드가 동일함.
-    - 차이점
-        - StringBuffer는 Thread-Safe함 / StringBuilder는 Thread-safe하지 않음 (불가능)
-
-    </details>
-
-
-- float a = 0.1 는 오류가 발생하는가?
-
-    <details>
-    발생한다.
-
-    float a = 0.1f로 코드를 바꿔야한다. 0.1뒤에 d가 생략되어있다. 자바는 실수의 default value는 double이기 때문이다.
-
-    </details>
-
-- 캐스팅이 필요한 이유는?
-
-    <details>
-    
-    1. **다형성** : 오버라이딩된 함수를 분리해서 활용할 수 있다.
-    2. **상속** : 캐스팅을 통해 범용적인 프로그래밍이 가능하다.
-    
-    <br>   
-     ‘캐스팅을 통해 범용적인 프로그래밍이 가능하다.’ 위의 말을 예시를 들어 설명가능한가?
-      
+        
+  1. 객체가 NULL인 경우 (ex. String str = null)
+  2. 블럭 실행 종료 후, 블럭 안에서 생성된 객체
+  3. 부모 객체가 NULL인 경우, 포함하는 자식 객체
   
-        class Animal{
-        	
-        	public void run() {
-        		System.out.println("Animal....");
-        	}
-        }
-        
-        class Tiger extends Animal{
-        	
-        	@Override
-        	public void run() {
-        		System.out.println("Tiger....");
-        	}
-        }
-        
-        class Cat extends Animal{
-        	
-        	@Override
-        	public void run() {
-        		System.out.println("Cat....");
-        	}
-        }
-        
-        class Rabbit extends Animal{
-        	
-        	@Override
-        	public void run() {
-        		System.out.println("Rabbit....");
-        	}
-        }
-        
-        public class JavaTest {
-        	
-        	public static void printAnimals(Animal[] animals) {
-        		for(Animal a : animals) {
-        			a.run();
-        		}
-        	}
-        	
-        //	public static void printTiger(Tiger tiger) {}
-        //	public static void printCat(Cat cat) {}
-        //	public static void printRabbit(Rabbit rabbit) {}
-        	
-        	public static void main(String[] args) {
-        		Animal tiger = new Tiger();
-        		Animal cat = new Cat();
-        		Animal rabbit = new Rabbit();
-        		
-        		Animal[] animals = {tiger, cat, rabbit};
-        	
-        		printAnimals(animals);
-        	}
-        	
-        }
+    </details>
+
+- JVM의 Heap 영역구성에 대해 말하시오.
+
+    <details>
+        - young generation : 새롭게 생성한 객체들이 대부분 여기에 위치. 해당 영역에서 일어나는 GC를 Minor GC라고 한다.
+            - edn(새롭게 생성된 객체들이 할당), 
+            - Survival0, Survival 1(Minor GC로부터 살아남은 객체들이 존재하는 영역, 0또는 1 둘중 하나는 반드시 비어있어야한다.)
+        - old generation : Young영역에서 살아남은 객체가 여기로 복사. 
 
     </details>
 
-- 다운캐스팅에서 주의해야할 점
-    <details>
 
-    다운 캐스팅 특성에 대해 주의해야 할 이유는 에디터에서 컴파일 에러가 발생하기 않고 런타임 에러가 발생하는 위험성이 있기 때문
+- java 8 Parallel GC 사용기준 age-bit가 몇이 되면 young에서 old로 넘겨주는 Promotion과정이 일어날까요?
+
+    <details>
+        15
+
+    </details>
+
+- servival 0, 1 둘로 나눠져있는 이유는 뭘까요?
+
+    <details>
+    
+   메모리의 단편화를 막기 위해서
+
+    </details>
+
+- heap영역을 old, young 두가지 영역으로 나눈 이유는?
+    <details>
+        통계적으로 대부분의 객체가 수명이 짧으므로 특정 부분만 탐색함으로써 GC의 성능을 높이기 위해 나누었다.
+        GC도 결국 비용이므로 메모리의 특정 부분만을 탐색하여 해제하면 효율적이기 때문에 Young Generation에서 최대한 처리하도록 나눴다고 합니다.
+    </details>
+
+- GC가 실행되는 과정을 말하시오.
+    <details>
+        
+        JVM의 Heap은 Young Generation, Old Generation으로 나뉘고, Young Generation은 다시 Eden, Servival 0, Servival 1 영역으로 나뉜다. Eden 영역이 꽉 차면 minor gc 가 실행되어 Mark And Sweep 알고리즘을 통해 참조가 되고 있는 객체만 Servival 0 또는 Servival 1 영역으로 옮긴다. 만약 여러 번 minor gc를 실행하고도 참조된 객체가 있다면 이 객체를 Servival 영역에서 Old Generation 영역으로 옮긴다. 시간이 지나서 Old Generation 영역이 꽉 차면 major gc를 실행하여 Mark And Sweep 알고리즘을 통해 필요 없는 메모리를 비운다.
+  
+    </details>
+
+- GC의 종류에 대해 말하고, 차이점들을 말하시오.
+    <details>
+        - Serial GC : 하나의 쓰레드로 GC를 실행시켜, STW(Stop The World) 시간이 오래 걸린다.
+        - Parallel GC : 여러개의 쓰레드로 GC를 실행시켜 STW 시간이 짧아지고 멀티 코어 환경에서 애플리케이션 처리 속도를 향상시키기 위해 사용된다. java 8에서 기본으로 사용되는 방식.
+        - CMS GC : Concurrent_Mark_Sweep의 줄임말로 STW를 최소화 하기위해 고안. 가비지 수집 작업을 애플리케이션 쓰레드와 동시에 수행해 stw를 최소화 시키지만, 메모리와 cpu를 많이 사용하고 compaction(메모리 파편화 해결)이 기본적으로 제공되지 않아 G1 GC가 등장하면서 대체.
+        - G1 GC : Garbage First의 줄임말로 Heap를 일정크기의 영역으로 나눠서 어떤 영역은 Young Generation, 어떤 영역은 Old Generation으로 활용. 런타임에 필요에 따라 영역별 개수를 튜닝. 이에 따라 stw를 최소화 할 수 있게 되어 Java 9 이상부터는 G1 GC를 기본 실행방식으로 사용.
+  
+    </details>
+
+- G1 GC의 장단점은?
+    <details>
+    - 장점
+        - 별도의 STW 없이도 여유 메모리 공간을 압축하는 기능을 제공한다. 또한, 전체 Old Generation 혹은 Young Generation 통째로 Compaction을 할 필요 없고, 해당 Generation의 일부분 Region에 대해서만 Compaction을 하면 된다.
+        - Heap 크기가 클수록 잘 동작한다.
+        - CMS의 비해 개선된 알고리즘을 사용하고, 처리 속도가 더 빠르다.
+        - Garbage로 가득찬 영역을 빠르게 회수하여 빈 공간을 확보하므로 GC 빈도가 줄어든다.
+        
+    - 단점
+        - 공간 부족 상태를 조심해야 한다. (Minor GC, Major GC 수행하고 나서도 여유 공간이 부족한 경우)
+        - 이때는 Full GC가 발생하는데, 이 GC는 Single Thread로 동작한다. Full GC는 heap 전반적으로 GC가 발생하는 것을 뜻한다. 작은 Heap 공간을 가지는 Application에서는 제 성능을 발휘하지 못하고 Full GC가 발생한다.
+        - Humonogous 영역은 제대로 최적화되지 않으므로 해당 영역이 많으면 성능이 떨어진다.
+  
+    </details>
+
+- G1 GC의 Heap 구조를 설명하라.
+    <details>
+       G1 GC는 기존 힙 구조와 완전히 다른 양상을 띈다. 전통적인 힙 구조는 Young, Old 영역을 명확하게 구분하였지만, G1 GC는 개념적으로 그들이 존재하나 일정 크기의 논리적 단위인 region으로 구분하고 있다.
+  
+    </details>
+
+  - G1 GC의 동작 과정을 설명하라.
+    <details>
+        
+        기본적으로 G1 GC는 Young-Only 단계와 Space Reclamation 단계를 반복하면서 수행하는 Cycle 구조로 진행된다.
+    
+        Young Only 단계는 Minor GC만 수행하다가 한정된 Old Generation 비율이 넘으면 Major GC가 수행된다.
+
+        그리고 Young Only 단계가 끝날 때까지 두 GC가 혼용된다.
+
+        Space Reclamation 단계는 Old 영역의 Garbage까지 수집하는 Minor GC 방식의 Mixed GC 방식이 수행된다.
+
+참고) https://steady-coding.tistory.com/590
     </details>
